# concrete_mix_design

./: Copy of Concrete_Data.csv  main.py  pyproject.toml  setup.py
aac/: setup.py
aac/aac_mix_optimization/: aac_data.csv
aac/aac_mix_optimization.egg-info/: PKG-INFO  top_level.txt
aac/aac_mix_optimization/config/: settings.py
aac/aac_mix_optimization/utils/: constraints.py  visualization.py
aac_mix_optimization/: main.py  pyproject.toml  setup.py
aac_mix_optimization.egg-info/: SOURCES.txt  requires.txt
aac_mix_optimization/config/: settings.py
aac_mix_optimization/models/: aac_mix_optimizer.py  aac_optimizer.py
aac_mix_optimization/tests/: test_constraints.py
concrete_mix_optimization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: settings.py
models/: concrete_mix_optimizer.py  concrete_optimizer.py
utils/: constraints.py
