[tool.poetry]
name = "concrete_mix_design"
version = "0.1.0"
description = ""
authors = ["zcesclc <zcesclc@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
deap = "^1.4.1"
matplotlib = "^3.9.2"
numpy = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


